@@ -4208,7 +4208,7 @@ MagickExport MagickBooleanType StripImage(Image *image)
   (void) DeleteImageProperty(image,"comment");
   (void) DeleteImageProperty(image,"date:create");
   (void) DeleteImageProperty(image,"date:modify");
-  (void) SetImageArtifact(image,"png:include-chunk","none,gama");
+  (void) SetImageArtifact(image,"png:include-chunk","none,trns,gama");
   return(MagickTrue);
 }
 
